app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require foundation_and_overrides
*= require pickadate/default
*= require pickadate/default.date
*= require pickadate/default.time
 */

.window {
  background-image: url("/images/brickwall_@2X.png");
  background-attachment: fixed;
  }

#content {
  margin-top: 60px;
}

.landing-page-description {
  text-align: center
}

.sub-content {
  margin: 10px;
  color: black;
}

.sent_message {
  border-radius: 10px;
  background-color: #A5FFAF;
  padding: 12px 20px 13px 12px;

}

.recived_massage {
  border-radius: 10px;
  background-color: #00E7F9;
  padding: 12px 20px 13px 12px;
}

#footer {
  font-size: 12px;
  margin-top: 300px;
}

.search-field {
  border-radius: 15px;
}

.profile_photo {
  border: 5px solid #333333;
  border-radius: 12px;
}

.profile_photo_thumb {
  max-height: 50px;
  max-width: 50px;
  border-radius: 10px;
}

